# economix

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
app/: alembic.ini  config.py  main.py
app/alembic/: env.py  script.py.mako
app/alembic/versions/: 2026-05-11_16-16-38.py  2026-05-21_12-49-27.py  2026-05-21_14-43-28.py  2026-05-21_14-54-06.py
app/api/v1/: __init__.py  analytics.py  auth.py  categories.py  dashboard.py  onboarding.py  snapshots.py
app/core/: dependencies.py  exceptions.py  middleware.py  redis.py  sql.py
app/crud/: snapshot.py  user.py  user_category.py  user_settings.py
app/models/: __init__.py  base.py  snapshot.py  user.py  user_category.py  user_settings.py
app/schemas/: analytics.py  auth.py  categories.py  dashboard.py  onboarding.py  snapshot.py  user.py
app/services/: analytics.py  auth.py  categories.py  dashboard.py  jwt.py  onboarding.py  snapshot.py
frontend/: .gitignore  index.html  package-lock.json  package.json
tests/: test_analytics_api.py  test_analytics_service.py  test_auth_api.py  test_categories_api.py  test_categories_service.py  test_dashboard_api.py  test_dashboard_service.py  test_onboarding_api.py  test_onboarding_service.py  test_snapshot_api.py  test_snapshot_service.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  styles.css
web/src/api/: analytics.ts  auth.ts  categories.ts  client.ts  dashboard.ts  onboarding.ts  snapshots.ts
web/src/auth/: AuthContext.tsx  RequireAuth.tsx  jwt.ts  storage.ts
web/src/components/: Field.tsx  (+4 more)
(+11 files in other folders)
