[project]
name = "economix"
version = "0.1.0"
description = ""
authors = [{ name = "Nikita Aspaev", email = "asspaev@yandex.ru" }]
license = "MIT"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy[asyncio] (>=2.0.36,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "pyjwt (>=2.10.0,<3.0.0)",
    "bcrypt (>=4.2.0,<5.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
